<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="156dp"
        android:layout_height="111dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pow" />

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/kbtnTxtConf"
        app:layout_constraintBottom_toTopOf="@+id/btnTelaInicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJogar" />

    <Button
        android:id="@+id/btnJogar"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/kbtnTxtJogo"
        app:layout_constraintBottom_toTopOf="@+id/btnConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/btnTelaInicio"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/kbtnTxtOpe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfig" />

</androidx.constraintlayout.widget.ConstraintLayout>